Fixed buggy implementation